Presentation ile WebAPI katmanı birbirine bağlandı

--- a/CleanArchitectureSkeleton.WebAPI/CleanArchitectureSkeleton.WebAPI.csproj
+++ b/CleanArchitectureSkeleton.WebAPI/CleanArchitectureSkeleton.WebAPI.csproj
@@ -15,4 +15,8 @@
       <Folder Include="Controllers\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\src\External\CleanArchitectureSkeleton.Presentation\CleanArchitectureSkeleton.Presentation.csproj" />
+    </ItemGroup>
+
 </Project>
