--- a/CleanArchitectureSkeleton.WebAPI/appsettings.json
+++ b/CleanArchitectureSkeleton.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5433;Database=CleanArchitectureSkeletonAppDb;User Id=postgres;Password=postgres;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
