EntityTypeConfiguration işlemleri yapıldı

--- a/src/External/CleanArchitectureSkeleton.Persistence/CleanArchitectureSkeleton.Persistence.csproj
+++ b/src/External/CleanArchitectureSkeleton.Persistence/CleanArchitectureSkeleton.Persistence.csproj
@@ -22,4 +22,8 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Core\CleanArchitectureSkeleton.Domain\CleanArchitectureSkeleton.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
