--- a/src/Core/CleanArchitectureSkeleton.Application/CleanArchitectureSkeleton.Application.csproj
+++ b/src/Core/CleanArchitectureSkeleton.Application/CleanArchitectureSkeleton.Application.csproj
@@ -6,4 +6,16 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.1.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Features\CarFeatures\Queries\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CleanArchitectureSkeleton.Domain\CleanArchitectureSkeleton.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
