--- a/src/External/CleanArchitectureSkeleton.Presentation/CleanArchitectureSkeleton.Presentation.csproj
+++ b/src/External/CleanArchitectureSkeleton.Presentation/CleanArchitectureSkeleton.Presentation.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Core\CleanArchitectureSkeleton.Application\CleanArchitectureSkeleton.Application.csproj" />
+    </ItemGroup>
+
 </Project>
