--- a/CleanArchitectureSkeleton.WebAPI/CleanArchitectureSkeleton.WebAPI.csproj
+++ b/CleanArchitectureSkeleton.WebAPI/CleanArchitectureSkeleton.WebAPI.csproj
@@ -17,6 +17,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
