--- a/src/Core/CleanArchitectureSkeleton.Application/CleanArchitectureSkeleton.Application.csproj
+++ b/src/Core/CleanArchitectureSkeleton.Application/CleanArchitectureSkeleton.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="EntityFrameworkCore.Pagination" Version="7.0.5" />
       <PackageReference Include="FluentValidation" Version="11.7.1" />
       <PackageReference Include="MediatR" Version="12.1.1" />
     </ItemGroup>
