--- a/src/External/CleanArchitectureSkeleton.Persistence/CleanArchitectureSkeleton.Persistence.csproj
+++ b/src/External/CleanArchitectureSkeleton.Persistence/CleanArchitectureSkeleton.Persistence.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="EntityFrameworkCore.Pagination" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
