--- a/src/External/CleanArchitectureSkeleton.Presentation/CleanArchitectureSkeleton.Presentation.csproj
+++ b/src/External/CleanArchitectureSkeleton.Presentation/CleanArchitectureSkeleton.Presentation.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="EntityFrameworkCore.Pagination" Version="7.0.5" />
       <PackageReference Include="MediatR" Version="12.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     </ItemGroup>
